# magic_params

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
include/: magic_params.hpp
src/: example.cpp  main.cpp
tests/: test.cpp
